--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,12 +21,12 @@
     "baseUrl": ".",
     "paths": {
       "@/*": [
-        "server/src/*"
+        "src/*"
       ]
     }
   },
   "include": [
-    "server/src/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
