refatoração: remove job de qualidade de código dos workflows do GitHub Actions e ajusta a estrutura dos jobs de implantação contínua para frontend e API

--- a/.github/workflows/ci-cd-front-end.yml
+++ b/.github/workflows/ci-cd-front-end.yml
@@ -16,12 +16,8 @@ env:
   VITE_BACKEND_URL: https://api.brev-ly.uk
 
 jobs:
-  code-quality:
+  continuous-deployment-frontend:
     runs-on: ubuntu-latest
-
-  continuous-deployment:
-    runs-on: ubuntu-latest
-    needs: code-quality
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
