--- a/.github/workflows/ci-cd-api.yml
+++ b/.github/workflows/ci-cd-api.yml
@@ -13,7 +13,7 @@ env:
   FRONTEND_URL: https://brev-ly.uk
 
 jobs:
-  continuous-deployment:
+  continuous-deployment-api:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
