--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -20,5 +20,6 @@ USER 1000
 COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/dist ./dist
 COPY --from=build /usr/src/app/package.json ./package.json
+COPY --from=build /usr/src/app/healthcheck.js ./healthcheck.js
 EXPOSE 8080
 CMD ["dist/app.js"]
