--- a/server/.env.example
+++ b/server/.env.example
@@ -8,3 +8,15 @@ CLOUDFLARE_ACCESS_KEY_ID=
 CLOUDFLARE_SECRET_ACCESS_KEY=
 CLOUDFLARE_BUCKET=
 CLOUDFLARE_PUBLIC_URL=
+
+DD_API_KEY=''
+DD_SITE='datadoghq.com'
+DD_SERVICE='meu-app-nodejs'
+DD_ENV=development
+DD_VERSION=1.0.0
+DD_TRACE_ENABLED=true
+DD_TRACE_DEBUG=false
+DD_TRACE_STARTUP_LOGS=true
+DD_LOGS_INJECTION=true
+DD_RUNTIME_METRICS_ENABLED=true
+DD_PROFILING_ENABLED=false   
