--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -21,4 +21,4 @@ COPY --from=build /usr/src/app/node_modules ./node_modules
 COPY --from=build /usr/src/app/dist ./dist
 COPY --from=build /usr/src/app/package.json ./package.json
 EXPOSE 8080
-CMD ["dist/app.js"]
+CMD ["node", "dist/app.js"]
