--- a/server/package.json
+++ b/server/package.json
@@ -22,12 +22,23 @@
     "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.62.1",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.203.0",
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
+    "@opentelemetry/semantic-conventions": "^1.36.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "csv-stringify": "^6.6.0",
     "dotenv-cli": "^10.0.0",
     "drizzle-orm": "^0.44.4",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.3",
+    "pino": "^9.9.0",
+    "pino-pretty": "^13.1.1",
     "postgres": "^3.4.7",
     "zod": "^4.0.16"
   },
@@ -35,8 +46,8 @@
     "@biomejs/biome": "^2.1.4",
     "@types/node": "^24.2.1",
     "drizzle-kit": "^0.31.4",
-    "typescript": "^5.9.2",
     "tsup": "^8.5.0",
-    "tsx": "^4.20.3"
+    "tsx": "^4.20.3",
+    "typescript": "^5.9.2"
   }
 }
