--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,6 +15,7 @@ RUN rm -rf node_modules
 RUN pnpm install --prod --frozen-lockfile
 #################
 FROM node:20-alpine AS runner
+RUN apk add --no-cache curl
 WORKDIR /usr/src/app
 USER 1000
 COPY --from=build /usr/src/app/node_modules ./node_modules
